Enhanced GUI, smali editor, and pipeline